Mensaje descriptivo de los cambios

--- a/Aplicaciones/Funcion/templates/inicio.html
+++ b/Aplicaciones/Funcion/templates/inicio.html
@@ -16,7 +16,7 @@
                             <h1 class="display-3 text-white animated slideInDown">PLataforma Online</h1>
                             <p class="fs-5 text-white mb-4 pb-2">Cada proyecto es una historia, y cada diseño es una palabra escrita en el espacio.</p>
                             <a href="{% url 'lista_clientes' %}" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Clientes</a>
-                            <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                            <a href="{% url 'proyecto_list' %}" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Proyectos</a>
                         </div>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                             <h1 class="display-3 text-white animated slideInDown">PLataforma Online</h1>
                             <p class="fs-5 text-white mb-4 pb-2">La arquitectura es el arte de hacer que lo esencial sea visualmente extraordinario.</p>
                             <a href="{% url 'lista_clientes' %}" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Clientes</a>
-                            <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                            <a href="{% url 'proyecto_list' %}" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Proyectos</a>
                         </div>
                     </div>
                 </div>
@@ -41,50 +41,55 @@
     </div>
 </div>
 <!-- Carousel End -->
- <!-- Service Start -->
- <div class="container-xxl py-5">
+
+
+
+
+
+<!-- Servicios Start -->
+<div class="container-xxl py-5">
     <div class="container">
         <div class="row g-4">
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item text-center pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                        <h5 class="mb-3">Skilled Instructors</h5>
-                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                        <i class="fa fa-3x fa-desktop text-primary mb-4"></i>
+                        <h5 class="mb-3">Gestión de Proyectos en Línea</h5>
+                        <p>Administra tus proyectos arquitectónicos de manera eficiente a través de nuestra plataforma web, con herramientas para seguimiento y colaboración en tiempo real.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item text-center pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                        <h5 class="mb-3">Online Classes</h5>
-                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                        <i class="fa fa-3x fa-file-alt text-primary mb-4"></i>
+                        <h5 class="mb-3">Documentación y Archivos</h5>
+                        <p>Almacena y organiza todos tus documentos y archivos de proyecto en un solo lugar, asegurando fácil acceso y colaboración con tu equipo.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="service-item text-center pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                        <h5 class="mb-3">Home Projects</h5>
-                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                        <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
+                        <h5 class="mb-3">Análisis y Reportes</h5>
+                        <p>Genera informes detallados sobre el progreso de tus proyectos, ayudándote a tomar decisiones informadas y mejorar la eficiencia.</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="service-item text-center pt-3">
                     <div class="p-4">
-                        <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                        <h5 class="mb-3">Book Library</h5>
-                        <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                        <i class="fa fa-3x fa-users text-primary mb-4"></i>
+                        <h5 class="mb-3">Colaboración en Equipo</h5>
+                        <p>Fomenta la colaboración entre miembros del equipo y clientes, asegurando que todos estén alineados y trabajen hacia objetivos comunes.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Service End -->
+<!-- Servicios End -->
 
 
 
