--- a/Aplicaciones/Funcion/templates/plantilla.html
+++ b/Aplicaciones/Funcion/templates/plantilla.html
@@ -67,19 +67,21 @@
                     <div class="navbar-nav ms-auto p-4 p-lg-0">
                         <a href="{% url 'inicio' %}" class="nav-item nav-link active">Inicio</a>
                         <a href="{% url 'lista_clientes' %}" class="nav-item nav-link">Clientes</a>
-                        <a href="courses.html" class="nav-item nav-link">Courses</a>
+                        <a href="{% url 'proyecto_list' %}" class="nav-item nav-link">Proyectos</a>
+                        
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Paguinas</a>
                             <div class="dropdown-menu fade-down m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="{% url 'lista_clientes' %}" class="dropdown-item">Clientes</a>
+                                <a href="{% url 'proyecto_list' %}" class="dropdown-item">Proyectos</a>
+                                
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    </div>
-                    <a href="{% url 'logout' %}" class="btn btn-danger py-4 px-lg-5 d-none d-lg-block">Cerrar sesión<i
-                            class="fa fa-arrow-right ms-3"></i></a>
+                        <a href="{% url 'logout' %}" class="nav-item nav-link text-danger">
+                            <i class="fas fa-sign-out-alt me-1"></i> Cerrar sesión
+                        </a>
+                        
+                   
                 </div>
             </nav>
             {% endblock %}
@@ -106,13 +108,12 @@
                 <div class="container py-5">
                     <div class="row g-5">
                         <div class="col-lg-3 col-md-6">
-                            <h4 class="text-white mb-3">Enlaces </h4>
+                            <h4 class="text-white mb-3">Enlaces Rapidos </h4>
                             <a class="btn btn-link" href="{% url 'inicio' %}">Inicio</a>
                             <a class="btn btn-link" href="{% url 'lista_clientes' %}">Clientes</a>
                             
-                            <a class="btn btn-link" href="">Privacy Policy</a>
-                            <a class="btn btn-link" href="">Terms & Condition</a>
-                            <a class="btn btn-link" href="">FAQs & Help</a>
+                            <a class="btn btn-link" href="{% url 'proyecto_list' %}">Proyectos</a>
+                          
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4 class="text-white mb-3">Contacto</h4>
